--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
         </p>
         <div class="photos-carousel">
             <div class="photos">
-                <img src="images/LOGO.png" alt="Logo de l'école">
-                <img src="images/image1.jpg" alt="Photo de l'école 1">
-                <img src="images/image2.jpg" alt="Photo de l'école 2">
-                <img src="images/image3.jpg" alt="Photo de l'école 3">
-                <img src="images/image4.jpg" alt="Photo de l'école 4">
-                <img src="images/image5.jpg" alt="Photo de l'école 5">
-                <img src="images/image6.jpg" alt="Photo de l'école 6">
-                <img src="images/image7.jpg" alt="Photo de l'école 7">
-                <img src="images/image8.jpg" alt="Photo de l'école 8">
-                <img src="images/image9.jpg" alt="Photo de l'école 9">
-                <img src="images/image10.jpg" alt="Photo de l'école 10">
-                <img src="images/image11.jpg" alt="Photo de l'école 11">
+                <img src="LOGO.png" alt="Logo de l'école">
+                <img src="image1.jpg" alt="Photo de l'école 1">
+                <img src="image2.jpg" alt="Photo de l'école 2">
+                <img src="image3.jpg" alt="Photo de l'école 3">
+                <img src="image4.jpg" alt="Photo de l'école 4">
+                <img src="image5.jpg" alt="Photo de l'école 5">
+                <img src="image6.jpg" alt="Photo de l'école 6">
+                <img src="image7.jpg" alt="Photo de l'école 7">
+                <img src="image8.jpg" alt="Photo de l'école 8">
+                <img src="image9.jpg" alt="Photo de l'école 9">
+                <img src="image10.jpg" alt="Photo de l'école 10">
+                <img src="image11.jpg" alt="Photo de l'école 11">
             </div>
         </div>
     </section>
