--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
         <h2>Notre Équipe</h2>
         <div class="team-members">
             <div class="member">
-                <img src="images/fondateur.jpg" alt="Fondateur">
+                <img src="fondateur.jpg" alt="Fondateur">
                 <p>Fondateur: M. Mamadou Bhoye Barry</p>
                 <p>Tél: +224 628 15 94 36</p>
             </div>
             <div class="member">
-                <img src="images/directeur.jpg" alt="Directeur">
+                <img src="directeur.jpg" alt="Directeur">
                 <p>Directeur: M. Mamadou Saïdou Diallo</p>
                 <p>Tél: +224 620 37 32 06</p>
             </div>
