--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Logo de l'école" class="logo">
+        <img src="LOGO.png" alt="Logo de l'école" class="logo">
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
