--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GS Néné Kadiatou Barry - Accueil</title>
+    <title>GS NENE KADIATOU BARRY - Accueil</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -54,19 +54,27 @@
         <div class="team-members">
             <div class="member">
                 <img src="fondateur.jpg" alt="Fondateur">
-                <p>Fondateur: M. Mamadou Bhoye Barry</p>
+                <h2>LE FONDATEUR</h2>
+                <p>M. BARRY MAMADOU BHOYE</p>
                 <p>Tél: +224 628 15 94 36</p>
             </div>
             <div class="member">
                 <img src="directeur.jpg" alt="Directeur">
-                <p>Directeur: M. Mamadou Saïdou Diallo</p>
+                <h2>LE DIRECTEUR</h2>
+                <p>M. DIALLO MAMADOU SAÏDOU</p>
                 <p>Tél: +224 620 37 32 06</p>
+            </div>
+            <div class="member">
+                <img src="principal.jpg" alt="Directeur">
+                <h2>LE PRINCIPAL</h2>
+                <p>M. DIALLO OUSMANE</p>
+                <p>Tél: +224 622 30 32 82</p>
             </div>
         </div>
     </section>
 
     <footer>
-        <p>GS Néné Kadiatou Barry &copy; 2024 - 2025 Tous droits réservés</p>
+        <p>GS NENE KADIATOU BARRY &copy; 2024 - 2025 Tous droits réservés</p>
     </footer>
 </body>
 </html>
