--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             </div>
             <div class="member">
                 <img src="directeur.jpg" alt="Directeur">
-                <h2>LE DIRECTEUR</h2>
+                <h2>LE DIRECTEUR GENERAL</h2>
                 <p>M. DIALLO MAMADOU SAÏDOU</p>
                 <p>Tél: +224 620 37 32 06</p>
             </div>
             <div class="member">
                 <img src="principal.jpg" alt="Directeur">
-                <h2>LE PRINCIPAL</h2>
+                <h2>LE PROVISEUR</h2>
                 <p>M. DIALLO OUSMANE</p>
                 <p>Tél: +224 622 30 32 82</p>
             </div>
